# SE4HPC_project_2025_first_part

./: .gitignore  CMakeLists.txt  convert_ppm.py  random_gen_images.py
include/: image_processing.hpp
src/: main.cpp  working_image_conversion.cpp
